Componente Example agregado, falta arreglarlo

--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,5 +1,6 @@
-<nav class="nav-wrapper blue">
-  <div class="container">
-    <a href="" class="brand-logo">PRODurango</a>
+<nav class="">
+  <div class="">
+    <a href="/" class="">PRODurango</a>
   </div>
 </nav>
+<app-examples></app-examples>
