--- a/Angular/src/app/components/users/users.component.html
+++ b/Angular/src/app/components/users/users.component.html
@@ -3,9 +3,9 @@
         <div class="col s5">
             <div class="card">
                 <div class="card-content">
-                    <form #userForm="ngForm" (ngSubmit)="addUser(userForm)">
+                    <!-- <form #userForm="ngForm" (ngSubmit)="addUser(userForm)">
                         
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </div>
