--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="nav-wrapper blue">
-  <div class="container">
-    <a href="" class="brand-logo">PRODurango</a>
-  </div>
-</nav>
+<div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
+  <app-header></app-header>
+  <app-settings></app-settings>
+  <app-sidemenu></app-sidemenu>
+</div>
