--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -3,6 +3,7 @@
   <div class="container-fluid">
     <div class="row">
       <app-sidemenu></app-sidemenu>
+      <app-examples></app-examples>
     </div>
   </div>
 </div>
