--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,8 +1,19 @@
 <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
-  <app-header></app-header>
-  <div class="container-fluid">
-    <div class="row">
-      <app-sidemenu></app-sidemenu>
+    <app-header></app-header>
+    <app-settings></app-settings>
+    <div class="app-main">
+        <app-sidemenu></app-sidemenu>
+        <div class="app-main__outer">
+            <div class="app-main__inner">
+                <app-main></app-main>
+            </div>
+            <div class="wrapper-footer">
+                <div class="app-footer">
+                    <app-footer></app-footer>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
+
+
