--- a/Angular/src/app/shared/header/header.component.html
+++ b/Angular/src/app/shared/header/header.component.html
@@ -1,37 +1,126 @@
-<!--<nav class="nav-wrapper blue">
-    <div class="container">
-        <a href="" class="brand-logo">PRODurango</a>
-    </div>
-</nav> -->
-
 <!-- Empieza Header -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand mb-0 h1" href="#">PRODurango</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">New</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About Page</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+<div class="app-header header-shadow">
+  <div class="app-header__logo">
+      <div class=""></div> PRODURANGO
+      <div class="header__pane ml-auto">
+          <div>
+              <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
+                  <span class="hamburger-box">
+                      <span class="hamburger-inner"></span>
+                  </span>
+              </button>
           </div>
-        </li>
-      </ul>
-    </div>
-  </nav>        
+      </div>
+  </div>
+  <div class="app-header__mobile-menu">
+      <div>
+          <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
+              <span class="hamburger-box">
+                  <span class="hamburger-inner"></span>
+              </span>
+          </button>
+      </div>
+  </div>
+  <div class="app-header__menu">
+      <span>
+          <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+              <span class="btn-icon-wrapper">
+                  <i class="fa fa-ellipsis-v fa-w-6"></i>
+              </span>
+          </button>
+      </span>
+  </div>    <div class="app-header__content">
+      <div class="app-header-left">
+          <div class="search-wrapper">
+              <div class="input-holder">
+                  <input type="text" class="search-input" placeholder="Type to search">
+                  <button class="search-icon"><span></span></button>
+              </div>
+              <button class="close"></button>
+          </div>
+          <ul class="header-menu nav">
+              <li class="nav-item">
+                  <a href="javascript:void(0);" class="nav-link">
+                      <i class="nav-link-icon fa fa-home"> </i>
+                      Home
+                  </a>
+              </li>
+              <li class="btn-group nav-item">
+                  <a href="javascript:void(0);" class="nav-link">
+                      <i class="nav-link-icon fa fa-list"></i>
+                      About us
+                  </a>
+              </li>
+          </ul>        
+        </div>
+      <div class="app-header-right">
+          <div class="header-btn-lg pr-0">
+              <div class="widget-content p-0">
+                  <div class="widget-content-wrapper">
+                      <div class="widget-content-left">
+                          <div class="btn-group">
+                              <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-bell fa-fw"></i>
+                                <!-- Counter - Alerts -->
+                                <span class="badge badge-danger badge-counter">2+</span>
+                              </a>
+                              <!-- Dropdown - Alerts -->
+                              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
+                                <h6 class="dropdown-header">
+                                  Alerts Center
+                                </h6>
+                                <a class="dropdown-item d-flex align-items-center" href="#">
+                                  <div class="mr-3">
+                                    <div class="icon-circle bg-primary">
+                                      <i class="fas fa-file-alt text-white"></i>
+                                    </div>
+                                  </div>
+                                  <div>
+                                    <div class="small text-gray-500">December 12, 2019</div>
+                                    <span class="font-weight-bold">A new monthly report is ready to download!</span>
+                                  </div>
+                                </a>
+                                <a class="dropdown-item d-flex align-items-center" href="#">
+                                  <div class="mr-3">
+                                    <div class="icon-circle bg-warning">
+                                      <i class="fas fa-exclamation-triangle text-white"></i>
+                                    </div>
+                                  </div>
+                                  <div>
+                                    <div class="small text-gray-500">December 2, 2019</div>
+                                    Spending Alert: We've noticed unusually high spending for your account.
+                                  </div>
+                                </a>
+                                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+                              </div>
+                              
+                              <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
+                                  <img width="42" class="rounded-circle" src="../../../assets/images/user.png" alt="">
+                                  <i class="fa fa-angle-down ml-2 opacity-8"></i>
+                              </a>
+                              <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
+                                  <button type="button" tabindex="0" class="dropdown-item">User Account</button>
+                                  <button type="button" tabindex="0" class="dropdown-item">Settings</button>
+                                  <h6 tabindex="-1" class="dropdown-header">Header</h6>
+                                  <button type="button" tabindex="0" class="dropdown-item">Actions</button>
+                                  <div tabindex="-1" class="dropdown-divider"></div>
+                                  <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="widget-content-left  ml-3 header-user-info">
+                          <div class="widget-heading">
+                              Admin
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>        
+        </div>
+  </div>
+
+
+</div>  
 <!--Termina Header-->
+
+
