--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -6,6 +6,7 @@
         <div class="app-main__outer">
             <div class="app-main__inner">
                 <app-main></app-main>
+                <app-examples></app-examples>
                 <app-login-example></app-login-example>
             </div>
             <div class="wrapper-footer">
@@ -16,5 +17,7 @@
         </div>
     </div>
 </div>
+
+<app-publicaciones></app-publicaciones>
 
 
