--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -1,5 +1,14 @@
 <div class="container">
   <div class="row">
+    <div class="col-md-5 offset-md-2">
+      <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#modalPublicaciones">
+        Añadir publicación
+      </button>
+    </div>
+  </div>
+  <br>
+  <br>
+  <div class="row">
     <div class="card col-md-5 col-sm-12 imgs" style="width: 18rem;">
       <img src="../../../assets/images/image1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
