--- a/Angular/src/app/components/main/main.component.css
+++ b/Angular/src/app/components/main/main.component.css
@@ -1,10 +1,15 @@
- .imgs{
-
- }
 
  .card {
      padding: 2%;
      margin-left: 4%;
      margin-right: 4%;
      margin-bottom: 2%;
+ }
+
+ .username{
+     color: blueviolet;
+ }
+
+ .username :hover{
+    color: blue;
  }
