--- a/Angular/src/app/shared/header/header.component.html
+++ b/Angular/src/app/shared/header/header.component.html
@@ -57,56 +57,59 @@
           <div class="header-btn-lg pr-0">
               <div class="widget-content p-0">
                   <div class="widget-content-wrapper">
+
                       <div class="widget-content-left">
-                          <div class="btn-group">
-                              <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                        <div class="btn-group">
+                            <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fas fa-bell fa-fw"></i>
                                 <!-- Counter - Alerts -->
                                 <span class="badge badge-danger badge-counter">2+</span>
-                              </a>
-                              <!-- Dropdown - Alerts -->
-                              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
+                            </a>
+                            <!-- Dropdown - Alerts -->
+                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
                                 <h6 class="dropdown-header">
-                                  Alerts Center
+                                Alerts Center
                                 </h6>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
-                                  <div class="mr-3">
+                                <div class="mr-3">
                                     <div class="icon-circle bg-primary">
-                                      <i class="fas fa-file-alt text-white"></i>
+                                    <i class="fas fa-file-alt text-white"></i>
                                     </div>
-                                  </div>
-                                  <div>
+                                </div>
+                                <div>
                                     <div class="small text-gray-500">December 12, 2019</div>
                                     <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                                  </div>
+                                </div>
                                 </a>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
-                                  <div class="mr-3">
+                                <div class="mr-3">
                                     <div class="icon-circle bg-warning">
-                                      <i class="fas fa-exclamation-triangle text-white"></i>
+                                    <i class="fas fa-exclamation-triangle text-white"></i>
                                     </div>
-                                  </div>
-                                  <div>
+                                </div>
+                                <div>
                                     <div class="small text-gray-500">December 2, 2019</div>
                                     Spending Alert: We've noticed unusually high spending for your account.
-                                  </div>
+                                </div>
                                 </a>
                                 <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
-                              </div>
-                              
-                              <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-                                  <img width="42" class="rounded-circle" src="../../../assets/images/user.png" alt="">
-                                  <i class="fa fa-angle-down ml-2 opacity-8"></i>
-                              </a>
-                              <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
-                                  <button type="button" tabindex="0" class="dropdown-item">User Account</button>
-                                  <button type="button" tabindex="0" class="dropdown-item">Settings</button>
-                                  <h6 tabindex="-1" class="dropdown-header">Header</h6>
-                                  <button type="button" tabindex="0" class="dropdown-item">Actions</button>
-                                  <div tabindex="-1" class="dropdown-divider"></div>
-                                  <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
-                              </div>
-                          </div>
+                            </div>
+                        </div>
+                        <div class="btn-group">
+                                <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
+                                    <img width="42" class="rounded-circle" src="../../../assets/images/user.png" alt="">
+                                    <i class="fa fa-angle-down ml-2 opacity-8"></i>
+                                </a>
+                                <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
+                                    <button type="button" tabindex="0" class="dropdown-item">User Account</button>
+                                    <button type="button" tabindex="0" class="dropdown-item">Settings</button>
+                                    <h6 tabindex="-1" class="dropdown-header">Header</h6>
+                                    <div tabindex="-1" class="dropdown-divider"></div>
+                                    <button type="button" tabindex="0" class="dropdown-item">Log out</button>
+                                </div>
+                        </div>
+
                       </div>
                       <div class="widget-content-left  ml-3 header-user-info">
                           <div class="widget-heading">
