--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -17,6 +17,10 @@
           <h5 class="card-title">{{ publicacion.titulo }}</h5>
           <p class="card-text">{{ publicacion.descripcion }}</p>
         </div>
+        <div class="d-flex justify-content-center">
+            <span>{{publicacion.denuncias}}</span>
+            <a><i class="fa fa-bullhorn"></i></a>
+        </div>
       </div>
   </div>
 </div>
