--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -15,9 +15,12 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
 <app-publicaciones></app-publicaciones>
+<app-login></app-login>
+
 
 
