--- a/Angular/src/app/components/login-example/login-example.component.html
+++ b/Angular/src/app/components/login-example/login-example.component.html
@@ -1,1 +1,28 @@
-<p>login-example works!</p>
+ <!-- <main class="container mt-5">
+    <div class="row">
+        <div class="col-md-6">
+            <button class="btn btn-danger btn-block" (click)="signInWithGoogle()">
+                <i class="fa fa-google"></i>
+                Iniciar sesión con Google
+            </button>
+        </div>
+        <div class="col-md-6">
+            <button class="btn btn-primary btn-block" (click)="signInWithFB()">
+                <i class="fa fa-facebook"></i>
+                Iniciar sesión con Facebook
+            </button>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+        <div class="col-md-6">
+            <img src="{{ user.photoUrl }}">
+            <div>
+                <h4>{{ user.name }}</h4>
+                <p>{{ user.email }}</p>
+            </div>
+        </div>
+    </div>
+</main>
+-->
