--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <div class="row">
+  <div class="row" *ngIf="user">
     <div class="col-md-5 offset-md-2">
       <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#modalPublicaciones">
         Añadir publicación
       </button>
-    </div>
+    </div> 
   </div>
   <br>
   <div *ngFor="let publicacion of publicacionService.publicaciones" class="row">
