--- a/Angular/src/assets/css/main.css
+++ b/Angular/src/assets/css/main.css
@@ -11598,7 +11598,7 @@ button,
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    text-fill-color: transparent
+    text-fill-color: transparent;
 }
 
 .font-size-xlg {
