--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -9,17 +9,29 @@
   <br>
   <div *ngFor="let publicacion of publicacionService.publicaciones" class="row">
       <div class="card col-10 offset-1 imgs" >
-        <img src= {{publicacion.archivos}} class="card-img-top" alt="...">
+        <div class="container">
+          <div class="d-flex justify-content-between align-items-center">
+            <h4 class="card-title">{{ publicacion.titulo }}</h4>
+            <div class="dropdown">
+              <a href="#" class="btn btn-primary btn-sm dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="#">Compartir</a>
+              </div>
+            </div>
+
+					</div>
+        </div>
+        <img src= "{{publicacion.archivos}}" class="card-img-top" alt="...">
         <div class="card-body">
-            <span>{{publicacion.nombre_usuario}}</span> 
+            <span>{{publicacion.nombre_usuario}}</span>  
           <br>
-          <span>{{ publicacion.fecha }}</span>
-          <h5 class="card-title">{{ publicacion.titulo }}</h5>
+          <h5>{{ publicacion.fecha }}</h5>
           <p class="card-text">{{ publicacion.descripcion }}</p>
         </div>
         <div class="d-flex justify-content-center">
             <span>{{publicacion.denuncias}}</span>
-            <a><i class="fa fa-bullhorn"></i></a>
+            <a (onClick)="aumentarDen(publicacion.denuncias)"><i class="fa fa-bullhorn"></i></a>
         </div>
       </div>
   </div>
