Logos del login cambiados

--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -22,7 +22,8 @@
 
 					</div>
         </div>
-        <img src= "{{publicacion.archivos}}" class="card-img-top" alt="...">
+        <br>
+        <img src= "{{publicacion.archivos}}" class="card-img-top imgArchivo" alt="...">
         <div class="card-body">
             <span>{{publicacion.nombre_usuario}}</span>  
           <br>
@@ -36,4 +37,3 @@
       </div>
   </div>
 </div>
-
