--- a/Angular/src/app/components/main/main.component.css
+++ b/Angular/src/app/components/main/main.component.css
@@ -1,15 +1,18 @@
+.card {
+    padding: 2%;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-bottom: 2%;
+}
 
- .card {
-     padding: 2%;
-     margin-left: 4%;
-     margin-right: 4%;
-     margin-bottom: 2%;
- }
+.username{
+    color: blueviolet;
+}
 
- .username{
-     color: blueviolet;
- }
+.username :hover{
+   color: blue;
+}
 
- .username :hover{
-    color: blue;
- }
+.imgArchivo{
+    height: 15em !important;
+}
