--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -16,13 +16,14 @@
               <a href="#" class="btn btn-primary btn-sm dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               </a>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">Compartir</a>
+                <a class="dropdown-item" href="#"><i class="fas fa-share-square"></i>  Compartir</a>
               </div>
             </div>
 
 					</div>
         </div>
-        <img src= "{{publicacion.archivos}}" class="card-img-top" alt="...">
+        <br>
+        <img src= "{{publicacion.archivos}}" class="card-img-top imgArchivo" alt="...">
         <div class="card-body">
             <span>{{publicacion.nombre_usuario}}</span>  
           <br>
