--- a/Angular/src/app/modals/login/login.component.html
+++ b/Angular/src/app/modals/login/login.component.html
@@ -13,10 +13,10 @@
           <img class="imgLogo align-self-center text-center" src="../../../assets/images/Logo.png" alt="PRO-DURANGO" srcset="">
         </div>
         <div class="form-group">
-          <button class="btn btn-danger form-control btnGoogle" (click)="signInWithGoogle()"><i class="fab fa-google text-white"></i> Google </button>
+          <button class="btn btn-danger form-control btnGoogle" (click)="sign()"><i class="fab fa-google text-white"></i> Google </button>
         </div>
         <div class="form-group">
-            <button class="btn btn-primary form-control btnFacebook" (click)="signInWithFB()"><i class="fab fa-facebook"></i> Facebook </button>
+            <button class="btn btn-primary form-control btnFacebook" (click)="sign()"><i class="fab fa-facebook"></i> Facebook </button>
         </div>
       </div>
     </div>
