persistencia del usuario: intento 7

--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -5,7 +5,7 @@
         <app-sidemenu></app-sidemenu>
         <div class="app-main__outer">
             <div class="app-main__inner">
-                <app-main></app-main>
+                <router-outlet></router-outlet>
             </div>
             <div class="wrapper-footer">
                 <div class="app-footer">
@@ -18,7 +18,7 @@
 </div>
 
 <app-publicaciones></app-publicaciones>
-<app-login></app-login>
+
 
 
 
