--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row" *ngIf="user">
+  <div class="row" *ngIf="logged == true">
     <div class="col-md-5 offset-md-2">
       <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#modalPublicaciones">
         Añadir publicación
