--- a/Angular/src/app/modals/publicaciones/publicaciones.component.html
+++ b/Angular/src/app/modals/publicaciones/publicaciones.component.html
@@ -37,37 +37,28 @@
             <div class="position-relative form-group d-flex justify-content-center">
 
               <div class="card" style="width: 29rem;">
-                <agm-map 
-                [latitude]="lat" 
-                [longitude]="lng" 
-                [zoom]="zoom" 
-                [mapTypeId]="mapTypeId"
-                (mapClick)="mapClicked($event)"> <!-- Creación del mapa -->
 
-                  <agm-marker
-                  *ngFor="let m of markers; let i = index"
-                  (markerClick)="clickedMarker(m.label, i)"
-                  [latitude]="m.lat" 
-                  [longitude]="m.lng" 
-                  [label]="m.label" 
-                  [markerDraggable]="m.draggable" 
-                  (dragEnd)="markerDragEnd(m, $event)"> <!-- Creación el marcaor -->
 
-                    <agm-info-window> <!-- Es la información que sale al darle click al marcador -->
-                      <h5>Título</h5>
-                      <span>Descripción</span>
-                    </agm-info-window>
-
-                  </agm-marker> 
-                </agm-map>
-                <div class="card-body">
-                  <!-- <h5 class="card-title">Card title</h5> -->
-                  <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                  <a href="#" class="btn btn-primary  d-flex justify-content-center" name="ubicacion" id="ubicacion" [(ngModel)]="ubicacion" (click)="obtenerPosicionActual()">Seleccionar mi ubicación actual</a>
-                  <a href="#" class="btn btn-primary  d-flex justify-content-center" name="ubicacion2" id="ubicacion2" [(ngModel)]="ubicacion" (click)="coordsFinales()">Confirmar ubicacion</a>
-                  
+                <div class="form-group">
+                  <label>Ubicación</label>
+                  <input type="text" class="form-control" (keydown.enter)="$event.preventDefault()" placeholder="Buscar la ubicación del incidente" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
                 </div>
+
+                <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+                  <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
+                    (dragEnd)="markerDragEnd($event)"></agm-marker>
+                </agm-map>
+
+                <h5>Dirección: {{address}}</h5>
+                <div>Latitud: {{latitude}}</div>
+                <div>Longitud: {{longitude}}</div>
+
+                <div class="card-body">
+                  <button (click)="obtenerCoords()" class="btn btn-primary  d-flex justify-content-center">Obtener dirección</button>
+                </div>
+                
               </div>
+
 
             </div>
           </div>
