--- a/Angular/src/app/shared/header/header.component.html
+++ b/Angular/src/app/shared/header/header.component.html
@@ -116,7 +116,7 @@
                                     <h6 tabindex="-1" class="dropdown-header">{{username}}</h6>
                                     <h6 tabindex="-1" class="dropdown-header">Email</h6>
                                     <div tabindex="-1" class="dropdown-divider"></div>
-                                    <button type="button" tabindex="0" class="dropdown-item" >Log out</button>
+                                    <button type="button" tabindex="0" class="dropdown-item" (click)="signOut()" >Log out</button>
                                 </div>
                         </div>
 
