--- a/Angular/src/app/components/main/main.component.html
+++ b/Angular/src/app/components/main/main.component.html
@@ -1,50 +1,47 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-5 offset-md-2">
-      <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#modalPublicaciones">
-        Añadir publicación
-      </button>
-    </div> 
+  <app-add-buttons></app-add-buttons>
+  <div class="container">
+    <button class="btn btn-info" data-toggle="modal" data-target="#modalPublicaciones">Añadir</button>
   </div>
   <br>
   <div *ngFor="let publicacion of publicacionService.publicaciones; let i=index" class="row">
       <div class="card col-10 offset-1 imgs" >
         <div class="container">
           <div class="d-flex justify-content-between align-items-center">
-            <h4 class="card-title">{{ publicacion.titulo }}</h4>
+            <h4 class="">{{ publicacion.titulo }}</h4>  
             <div class="dropdown">
-              <a href="#" class="btn btn-primary btn-sm dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              </a>
+              <a href="#" class="dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <a href="https://www.facebook.com/sharer/sharer.php?u=www.produrango.mx/{{publicacion._id}}" target="_blank" onclick="window.open(this.href, this.target, 'width=526,height=800'); return false;" class="dropdown-item"> <i class="fab fa-facebook"></i> Compartir en Facebook</a>
                 <a href="https://api.whatsapp.com/send?text={{publicacion.titulo}}%20www.produrango.mx/{{publicacion._id}}" target="_blank" onclick="window.open(this.href, this.target, 'width=700,height=800'); return false;" class="dropdown-item"> <i class="fab fa-whatsapp-square"></i> Compartir en WhatsApp</a>
                 <a href="https://twitter.com/intent/tweet?text={{publicacion.titulo}}&url=www.produrango.mx/{{publicacion._id}}&hashtags=PRODurango"target="_blank" onclick="window.open(this.href, this.target, 'width=700,height=800'); return false;" class="dropdown-item"> <i class="fab fa-twitter-square"></i> Compartir en Twitter</a>
+                <a class="dropdown-item">Editar <i class="fa fa-edit"></i></a>
               </div>
             </div>
-
 					</div>
         </div>
-        <br>
-        <img src= "{{publicacion.archivos}}" class="card-img-top imgArchivo" alt="...">
-        <div class="card-body">
-            <span>{{publicacion.nombre_usuario}}</span>  
-          <br>
+        <div class="cardBody">
+          <a href="#"><h6>{{publicacion.nombre_usuario}}</h6></a>
           <h5>{{ publicacion.fecha }}</h5>
           <p class="card-text">{{ publicacion.descripcion }}</p>
-        </div>
-        <div class="d-flex justify-content-center">
-            <span>{{publicacion.denuncias}}</span>
-            <a (onClick)="aumentarDen(publicacion.denuncias)"><i class="fa fa-bullhorn"></i></a>
-        </div>
-        <span>{{markers[i].lat}},   {{markers[i].lat}}</span>
-          <agm-map [latitude]=markers[i].lat [longitude]=markers[i].lng [zoom]="zoom">
-            <agm-marker [latitude]=markers[i].lat [longitude]=markers[i].lng [label]="" [markerDraggable]="false">
+            <div *ngIf="publicacion.archivos != ''" class="doc">
+              <div class="box">
+                <img src= "{{publicacion.archivos}}" class="imgArchivo">
+              </div>
+            </div>
+          <br *ngIf="publicacion.archivos != ''">
+          <agm-map [latitude]="publicacion.latitud" [longitude]="publicacion.longitud" [zoom]="zoom">
+            <agm-marker [latitude]="publicacion.latitud" [longitude]="publicacion.longitud" [label]="" [markerDraggable]="false">
               <agm-info-window> <!-- Es la información que sale al darle click al marcador -->
                 <h3>{{publicacion.titulo}}</h3>
                 <span>{{publicacion.descripcion}}</span>
               </agm-info-window>
             </agm-marker>
           </agm-map>
+          <div class="d-flex justify-content-center">
+            <span>{{publicacion.denuncias}}  </span>
+            <a class="icon-den" (click)="aumentarDen(publicacion._id)"><i class="fa fa-bullhorn"></i></a>
+          </div>
+        </div>
       </div>
   </div>
-</div>
+
