--- a/Angular/src/app/components/users/users.component.html
+++ b/Angular/src/app/components/users/users.component.html
@@ -1,11 +1,62 @@
-<div class="contariner">
+<div class="container">
     <div class="row">
         <div class="col s5">
             <div class="card">
                 <div class="card-content">
-                    <!--<form #userForm="ngForm" (ngSubmit)="addUser(userForm)">
-                        
-                    </form>-->
+                    <form #usuarioForm="ngForm" (ngSubmit)="addUsuarios(usuarioForm)">
+                        <div id="mensajeGuardarUsuario"></div>
+                        <input type="hidden" name="_id" #_id="ngModel" [(ngModel)]="userService.selectedUser._id">
+                        <div>
+                            <div>
+                                <input type="text" name="nombre" #nombre="ngModel" [(ngModel)]="userService.selectedUser.name" placeholder="Ingresa el nombre">
+                            </div>
+                            <div>
+                                <input type="text" name="tipo" #tipo="ngModel" [(ngModel)]="userService.selectedUser.tipo" placeholder="Ingresa el tipo">
+                            </div>
+                            <div>
+                                <input type="text" name="foto" #foto="ngModel" [(ngModel)]="userService.selectedUser.foto" placeholder="Ingresa la foto">
+                            </div>
+                            <div>
+                                <input type="text" name="num_reportes" #num_reportes="ngModel" [(ngModel)]="userService.selectedUser.num_reportes" placeholder="Ingresa el num de reportes">
+                            </div>
+                            <div>
+                                <div>
+                                    <button (click)=resetForm(usuarioForm)>Limpiar</button>
+                                    <button>Guardar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+
+
+
+                    <table class="table">
+                        <thead>
+                            <th>Nombre</th>
+                            <th>Tipo</th>
+                            <th>Foto</th>
+                            <th>Num. Reportes</th>
+                            <th>Operaciones</th>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let user of userService.users">
+                                <td>{{ user.name }}</td>
+                                <td>{{ user.contrasena }}</td>
+                                <td>{{ user.tipo }}</td>
+                                <td>{{ user.foto }}</td>
+                                <td>{{ user.num_reportes }}</td>
+                                <td>
+                                    <a (click)="editUsuario(user)">
+                                        <i class="material-icons">edit</i>
+                                    </a>
+                                    <a (click)="deleteUsuario(user._id)">
+                                        <i class="material-icons">delete</i>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
