--- a/Angular/src/app/modals/publicaciones/publicaciones.component.html
+++ b/Angular/src/app/modals/publicaciones/publicaciones.component.html
@@ -151,10 +151,30 @@
         
         <div class="modal-footer">
           <button class="btn btn-primary">Limpiar</button>
-          <button class="btn btn-primary" >Guardar Cambios</button>
+          <button class="btn btn-primary" (click)="updatePublicacion()">Guardar Cambios</button>
         </div>
       </form>
     </div>
   </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ¿Estás seguro de querer eliminar esta publicación?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary" (click)="deletePublicacion()">Aceptar</button>
+      </div>
+    </div>
+  </div>
+</div>
