--- a/Angular/src/app/shared/sidemenu/sidemenu.component.html
+++ b/Angular/src/app/shared/sidemenu/sidemenu.component.html
@@ -38,7 +38,6 @@
                     <a href="#">
                         <i class="metismenu-icon fas fa-bullhorn"></i>
                         Denuncias
-                        <i class="metismenu-icon pe-7s-angle-down caret-left"></i>
                     </a>
                     <ul>
                         <li>
@@ -52,11 +51,23 @@
                     <a href="#">
                         <i class="metismenu-icon fas fa-exclamation-triangle"></i>
                         Reportes
-                        <i class="metismenu-icon pe-7s-angle-down caret-left"></i>
                     </a>
                     <ul>
                         <li>
                             <a href="#">
+                                <i class="metismenu-icon"></i> Lista
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="metismenu-icon fas fa-users"></i>
+                        Usuarios
+                    </a>
+                    <ul>
+                        <li>
+                            <a href="users">
                                 <i class="metismenu-icon"></i> Lista
                             </a>
                         </li>
